# TecosFileManager

./: CMakeLists.txt  make_build.sh  rebuild_ide.sh  run_kernel.sh  run_kernel.sh.in
cmake/: toolchain-raspberry-pi.cmake
code/: TecosFileManager.cpp  TecosFileManager.h  arch.h  arch.h.in  kernel_main.cc  output.cc  output.h  stub.cc
code/arch/raspberry-pi/: #linker.ld#  bootstrap.S  framebuffer.cc  framebuffer.h  io.cc  io.h  linker.ld  memory.cc  memory.h  output.cc  output.h  serial.cc  serial.h  time.S  time.cc  time.h
code/filesystem/: Directory.cpp  Directory.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystemItem.cpp  FileSystemItem.h  FileSystemItemType.h  md5.cpp  md5.h
code/utils/: CharDrawer.cpp  CharDrawer.h  LocalDataTimeStub.h  UIDrawer.cpp  UIDrawer.h
